# forksync

./: .gitignore  Cargo.toml  README.md  action.yml  package.json
.github/workflows/: formal-checks.yml  release.yml
crates/forksync-agent/: Cargo.toml
crates/forksync-agent/src/: lib.rs
crates/forksync-cli/: Cargo.toml
crates/forksync-cli/src/: init_wizard.rs  main.rs  telemetry.rs
crates/forksync-cli/tests/: local_user_flow.rs
crates/forksync-config/: Cargo.toml
crates/forksync-config/src/: lib.rs
crates/forksync-engine/: Cargo.toml
crates/forksync-engine/src/: lib.rs
crates/forksync-engine/tests/: failure_paths.rs  formal_model.rs
crates/forksync-git/: Cargo.toml
crates/forksync-git/src/: lib.rs
crates/forksync-github/: Cargo.toml
crates/forksync-github/src/: lib.rs
crates/forksync-state/: Cargo.toml
crates/forksync-state/src/: lib.rs
docs/release/: README.md
formal/: README.md
formal/tla/: ForkSyncCore.cfg  ForkSyncCore.live_only.cfg  ForkSyncCore.tla
registry/: package-lock.json  package.json  wrangler.toml
registry/migrations/: 0001_init.sql
registry/src/: auth.js  command.js  db.js  index.js  render.js  schema.js
registry/test/: auth.test.js  command.test.js
scripts/: bootstrap_action_runtime.sh  make_test_repos.sh  run_act.sh  run_action_sync.sh  run_formal_checks.sh  runtime.js
scripts/release/: package-binary.js  publish-release.sh
