[workspace]
members = [
    "crates/forksync-agent",
    "crates/forksync-cli",
    "crates/forksync-config",
    "crates/forksync-engine",
    "crates/forksync-git",
    "crates/forksync-github",
    "crates/forksync-state",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.17"

[workspace.lints.rust]
unsafe_code = "forbid"
