[workspace]
members = [
    "crates/forksync-agent",
    "crates/forksync-cli",
    "crates/forksync-config",
    "crates/forksync-engine",
    "crates/forksync-git",
    "crates/forksync-github",
    "crates/forksync-state",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
inquire = "0.9.1"
interactive-clap = "0.3.2"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "logs", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["logs", "rt-tokio", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
thiserror = "2.0.17"
tla-connect = "0.0.4"
fs4 = "0.13.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }

[workspace.lints.rust]
unsafe_code = "forbid"
