[package]
name = "forksync-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "forksync"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
forksync-agent = { path = "../forksync-agent" }
forksync-config = { path = "../forksync-config" }
forksync-engine = { path = "../forksync-engine" }
forksync-git = { path = "../forksync-git" }
forksync-github = { path = "../forksync-github" }
forksync-state = { path = "../forksync-state" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
