[package]
name = "forksync-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "forksync"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
forksync-agent = { path = "../forksync-agent" }
forksync-config = { path = "../forksync-config" }
forksync-engine = { path = "../forksync-engine" }
forksync-git = { path = "../forksync-git" }
forksync-github = { path = "../forksync-github" }
forksync-state = { path = "../forksync-state" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-appender-tracing.workspace = true

[dev-dependencies]
fs4.workspace = true
tempfile.workspace = true

[lints]
workspace = true
