[package]
name = "forksync-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
