[package]
name = "forksync-github"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
forksync-config = { path = "../forksync-config" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
